[package]
name = "anchor-worker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { features = ["full"], version = "1.36.0" }
serde_json = "1.0.113"
